tests/js_error/source_locations/destructure/object/copy_data_properties_throws.js
var proxy = new Proxy({}, {
  getOwnPropertyDescriptor() {
    throw new Error()
  },
  ownKeys() {
    return ['a']
  }
});

var { ...x } = proxy;